--- a/Sheaft.Web.Manage/Views/Agreements/Index.cshtml
+++ b/Sheaft.Web.Manage/Views/Agreements/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Sheaft.Domain.Enum
 @using Sheaft.Web.Manage.Extensions
-@model IEnumerable<AgreementViewModel>
+@model IEnumerable<ShortAgreementViewModel>
 @{
     ViewData["Title"] = "Agreements";
     int take = ViewBag.Take;
