--- a/Sheaft.Web.Manage/Views/Catalogs/Index.cshtml
+++ b/Sheaft.Web.Manage/Views/Catalogs/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Sheaft.Web.Manage.Extensions
-@model IEnumerable<CatalogViewModel>
+@model IEnumerable<ShortCatalogViewModel>
 @{
     ViewData["Title"] = "Catalogs";
     int take = ViewBag.Take;
