--- a/Sheaft.Web.Manage/Views/Deliveries/Index.cshtml
+++ b/Sheaft.Web.Manage/Views/Deliveries/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Sheaft.Domain.Enum
 @using Sheaft.Domain.Extensions
 @using Sheaft.Web.Manage.Extensions
-@model IEnumerable<DeliveryViewModel>
+@model IEnumerable<ShortDeliveryViewModel>
 @{
     ViewData["Title"] = "Deliveries";
     int take = ViewBag.Take;
