--- a/Sheaft.Web.Manage/Views/Products/Index.cshtml
+++ b/Sheaft.Web.Manage/Views/Products/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Sheaft.Web.Manage.Extensions
-@model IEnumerable<ProductViewModel>
+@model IEnumerable<ShortProductViewModel>
 @{
     ViewData["Title"] = "Products";
     int take = ViewBag.Take;
