--- a/Sheaft.Web.Manage/Views/PurchaseOrders/Index.cshtml
+++ b/Sheaft.Web.Manage/Views/PurchaseOrders/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Sheaft.Domain.Enum
 @using Sheaft.Web.Manage.Extensions
-@model IEnumerable<PurchaseOrderViewModel>
+@model IEnumerable<ShortPurchaseOrderViewModel>
 @{
     ViewData["Title"] = "Purchase Orders";
     int take = ViewBag.Take;
