--- a/Sheaft.Web.Manage/Views/DeliveryBatches/Index.cshtml
+++ b/Sheaft.Web.Manage/Views/DeliveryBatches/Index.cshtml
@@ -1,7 +1,6 @@
 ﻿@using Sheaft.Domain.Enum
-@using Sheaft.Domain.Extensions
 @using Sheaft.Web.Manage.Extensions
-@model IEnumerable<DeliveryBatchViewModel>
+@model IEnumerable<ShortDeliveryBatchViewModel>
 @{
     ViewData["Title"] = "DeliveryBatches";
     int take = ViewBag.Take;
