--- a/Sheaft.Web.Manage/Views/Orders/Index.cshtml
+++ b/Sheaft.Web.Manage/Views/Orders/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Sheaft.Domain.Enum
-@model IEnumerable<OrderViewModel>
+@model IEnumerable<ShortOrderViewModel>
 @{
     ViewData["Title"] = "Orders";
     int take = ViewBag.Take;
