--- a/Sheaft.Web.Manage/Views/Stores/Edit.cshtml
+++ b/Sheaft.Web.Manage/Views/Stores/Edit.cshtml
@@ -3,6 +3,26 @@
     ViewData["Title"] = "Store details";
 
     var availableTags = ((List<TagViewModel>) ViewBag.Tags).Select(c => new SelectListItem(c.Name, c.Id.ToString("D"))).ToList();
+    
+    var days = new List<SelectListItem>
+    {
+        new SelectListItem("", null),
+        new SelectListItem("Monday", ((int) DayOfWeek.Monday).ToString()),
+        new SelectListItem("Tuesday", ((int) DayOfWeek.Tuesday).ToString()),
+        new SelectListItem("Wednesday", ((int) DayOfWeek.Wednesday).ToString()),
+        new SelectListItem("Thursday", ((int) DayOfWeek.Thursday).ToString()),
+        new SelectListItem("Friday", ((int) DayOfWeek.Friday).ToString()),
+        new SelectListItem("Saturday", ((int) DayOfWeek.Saturday).ToString()),
+        new SelectListItem("Sunday", ((int) DayOfWeek.Sunday).ToString())
+    };
+    
+    Model.Closings ??= new List<ClosingViewModel>();
+    Model.OpeningHours ??= new List<TimeSlotViewModel>();
+    
+    Model.Closings.Add(new ClosingViewModel());
+    Model.OpeningHours.Add(new TimeSlotViewModel());
+        
+    Model.Pictures = Model.Pictures?.OrderBy(p => p.Position).ToList();
 }
 
 <div class="container">
@@ -121,6 +141,139 @@
                 </div>
             </div>
         </div>
+        <br/>
+        <h2>DeliveryHours</h2>
+        <table class="table table-striped table-dark">
+            <thead>
+            <tr>
+                <td>Day</td>
+                <td>From</td>
+                <td>To</td>
+                <td>Remove</td>
+                <td></td>
+            </tr>
+            </thead>
+            <tbody>
+            @if (Model.OpeningHours.Any())
+            {
+                var i = 0;
+                @foreach (var deliveryHour in Model.OpeningHours)
+                {
+                    <tr>
+                        <td>
+                            @Html.HiddenFor(m => m.OpeningHours[i].Id)
+                            <div class="form-group">
+                                @Html.DropDownListFor(m => m.OpeningHours[i].Day, days, new {@class = "form-control"})
+                            </div>
+                        </td>
+                        <td>
+                            <div class="form-group">
+                                @Html.TextBoxFor(m => m.OpeningHours[i].From, null, new {@class = "form-control", @type="time"})
+                            </div>
+                        </td>
+                        <td>
+                            <div class="form-group">
+                                @Html.TextBoxFor(m => m.OpeningHours[i].To, null, new {@class = "form-control", @type="time"})
+                            </div>
+                        </td>
+                        <td>
+                            @if (Model.OpeningHours[i].Id.HasValue)
+                            {
+                                @Html.CheckBoxFor(m => m.OpeningHours[i].Remove)
+                            }
+                        </td>
+                    </tr>
+                
+                    i++;
+                }
+            }
+            </tbody>
+        </table>
+        <br/>
+        <h2>Images</h2>
+        <table class="table table-striped table-dark">
+            <thead>
+            <tr>
+                <td>Image</td>
+                <td>Position</td>
+                <td>Remove</td>
+            </tr>
+            </thead>
+            <tbody>
+            @if (Model.Pictures != null)
+            {
+                var i = 0;
+                @foreach (var picture in Model.Pictures)
+                {
+                    var id = i++;
+                    <tr>
+                        <td>
+                            @Html.HiddenFor(m => m.Pictures[id].Id)
+                            @Html.HiddenFor(m => m.Pictures[id].Url)
+                            <img src="@picture.Url" height="120"/>
+                        </td>
+                        <td>
+                            @Html.TextBoxFor(m => m.Pictures[id].Position, null, new {@class = "form-control"})
+                        </td>
+                        <td>@Html.CheckBoxFor(m => m.Pictures[id].Remove)</td>
+                    </tr>
+                }
+            }
+            </tbody>
+        </table>
+
+        <h3>Nouvelles images</h3>
+        <div class="form-group">
+            @Html.TextBox("newPictures", null, new {@class = "form-control", @type = "file", @multiple = ""})
+        </div>
+        <br/>
+        <h2>Closings</h2>
+        <table class="table table-striped table-dark">
+            <thead>
+            <tr>
+                <td>From</td>
+                <td>To</td>
+                <td>Reason</td>
+                <td>Remove</td>
+                <td></td>
+            </tr>
+            </thead>
+            <tbody>
+            @if (Model.Closings.Any())
+            {
+                var i = 0;
+                @foreach (var closing in Model.Closings)
+                {
+                    <tr>
+                        <td>
+                            @Html.HiddenFor(m => m.Closings[i].Id)
+                            <div class="form-group">
+                                @Html.TextBoxFor(m => m.Closings[i].ClosedFrom, null, new {@class = "form-control", @type="datetime"})
+                            </div>
+                        </td>
+                        <td>
+                            <div class="form-group">
+                                @Html.TextBoxFor(m => m.Closings[i].ClosedTo, null, new {@class = "form-control", @type="datetime"})
+                            </div>
+                        </td>
+                        <td>
+                            <div class="form-group">
+                                @Html.TextBoxFor(m => m.Closings[i].Reason, null, new {@class = "form-control"})
+                            </div>
+                        </td>
+                        <td>
+                            @if (Model.Closings[i].Id.HasValue)
+                            {
+                                @Html.CheckBoxFor(m => m.Closings[i].Remove)
+                            }
+                        </td>
+                    </tr>
+
+                    i++;
+                }
+            }
+            </tbody>
+        </table>
         <br/>
         <h4>Legals</h4>
         @if (ViewBag.LegalsId != null)
