--- a/Sheaft.Mailing/Templates/DeliveryForm.cshtml
+++ b/Sheaft.Mailing/Templates/DeliveryForm.cshtml
@@ -39,8 +39,6 @@
         <strong>@Model.Producer.Name</strong><br/>
         @Model.Producer.Email<br/>
         @Model.Producer.Phone<br/>
-        @Model.Producer.Siret<br/>
-
         @Model.Producer.Address.Line1<br/>
         @if (!string.IsNullOrWhiteSpace(@Model.Producer.Address.Line2))
         {
@@ -53,7 +51,6 @@
         <strong>@Model.Client.Name</strong><br/>
         @Model.Client.Email<br/>
         @Model.Client.Phone<br/>
-        @Model.Client.Siret<br/>
 
         @Model.Client.Address.Line1<br/>
         @if (!string.IsNullOrWhiteSpace(@Model.Client.Address.Line2))
@@ -71,6 +68,7 @@
     <thead>
     <tr style="background-color: #009688;color: #ffffff;text-align: left;">
         <th style="padding: 12px 15px;">Produit</th>
+        <th style="padding: 12px 15px;">Lot(s)</th>
         <th style="padding: 12px 15px;text-align: center;">Quantité</th>
         <th style="padding: 12px 15px;text-align: center;">PU HT (€)</th>
         <th style="padding: 12px 15px;text-align: center;">TVA (%)</th>
@@ -81,12 +79,37 @@
     @foreach (var item in Model.PurchaseOrders)
     {
         <tr style="padding: 10px 15px;text-align: left;">
-            <th colspan="5" style="padding:15px 5px;">Commande @item.Reference du @item.CreatedOn.ToString("dd/MM/yyyy")</th>
+            <th colspan="6" style="padding:15px 5px;">Commande @item.Reference du @item.CreatedOn.ToString("dd/MM/yyyy")</th>
         </tr>
         @foreach (var product in item.Products)
         {
-            <tr >
-                <td style="padding: 10px 15px;vertical-align: center;">@product.Name</td>
+            <tr>
+                <td style="padding: 10px 15px;vertical-align: center;">
+                    @product.Name<br/>
+                    <span style="color:#333333; font-size: 10px;">#@product.Reference - @product.Conditioning</span>
+                </td>
+                <td style="padding: 10px 15px;vertical-align: center;">
+                    @if (product.Quantity > 0)
+                    {
+                        <ul>
+                            @foreach (var batch in product.Batches)
+                            {
+                                if (batch.DLC.HasValue)
+                                {
+                                    <li>N°@batch.Number - DLC: @batch.DLC.Value.ToString("dd/MM/yyyy")</li>
+                                }
+                                else if (batch.DLUO.HasValue)
+                                {
+                                    <li>N°@batch.Number - DLUO: @batch.DLUO.Value.ToString("dd/MM/yyyy")</li>
+                                }
+                                else
+                                {
+                                    <li>N°@batch.Number</li>
+                                }
+                            }
+                        </ul>
+                    }
+                </td>
                 <td style="padding: 10px 15px;vertical-align: center; text-align: right;">@product.Quantity</td>
                 <td style="padding: 10px 15px;vertical-align: center; text-align: right;">@product.ProductWholeSalePrice</td>
                 <td style="padding: 10px 15px;vertical-align: center; text-align: right;">@product.Vat</td>
@@ -109,12 +132,16 @@
         @foreach (var productGrouping in Model.ProductsDiffs.GroupBy(p => p.RowKind))
         {
             <tr style="padding: 10px 15px;text-align: left;">
-                <th colspan="5" style="padding:15px 5px;">Produits @productGrouping.Key.ToEnumString()s</th>
+                <th colspan="6" style="padding:15px 5px;">Produits @productGrouping.Key.ToEnumString()s</th>
             </tr>
             @foreach (var product in productGrouping)
             {
                 <tr>
-                    <td style="padding: 10px 15px;vertical-align: center;">@product.Name</td>
+                    <td style="padding: 10px 15px;vertical-align: center;">
+                        @product.Name<br/>
+                        <span style="color:#333333; font-size: 10px;">#@product.Reference - @product.Conditioning</span>
+                    </td>
+                    <td/>
                     <td style="padding: 10px 15px;vertical-align: center; text-align: right;">@product.Quantity</td>
                     <td style="padding: 10px 15px;vertical-align: center; text-align: right;">@product.ProductWholeSalePrice</td>
                     <td style="padding: 10px 15px;vertical-align: center; text-align: right;">@product.Vat</td>
@@ -140,7 +167,7 @@
     @if (Model.ReturnedReturnables.Any())
     {
         <tr style="padding: 10px 15px;text-align: left;">
-            <th colspan="5" style="padding:15px 5px;">Consignes rendues</th>
+            <th colspan="6" style="padding:15px 5px;">Consignes rendues</th>
         </tr>
         @foreach (var product in Model.ReturnedReturnables)
         {
@@ -154,37 +181,37 @@
         }
     }
     <tr style="border:none;">
-        <td colspan="3" style="border:none;padding: 10px 15px;vertical-align: center; text-align: right;"></td>
+        <td colspan="4" style="border:none;padding: 10px 15px;vertical-align: center; text-align: right;"></td>
         <td style=" padding: 10px 15px;vertical-align: center; text-align: right;">Total HT</td>
         <td style=" padding: 10px 15px;vertical-align: center; text-align: right;">@Model.TotalWholeSalePrice EUR</td>
     </tr>
     <tr style="border:none;">
-        <td colspan="3" style="border:none;padding: 10px 0px;vertical-align: center; text-align: left;">Livraison réceptionnée par : <strong>@Model.ReceptionnedBy</strong></td>
+        <td colspan="4" style="border:none;padding: 10px 0px;vertical-align: center; text-align: left;">Livraison réceptionnée par : <strong>@Model.ReceptionnedBy</strong></td>
         <td style=" padding: 10px 15px;vertical-align: center; text-align: right;">Total TVA</td>
         <td style=" padding: 10px 15px;vertical-align: center; text-align: right;">@Model.TotalVatPrice EUR</td>
     </tr>
     <tr style="border:none;">
-        <td colspan="3" style="border:none;padding: 10px 15px;vertical-align: center; text-align: right;"></td>
+        <td colspan="4" style="border:none;padding: 10px 15px;vertical-align: center; text-align: right;"></td>
         <td style=" padding: 10px 15px;vertical-align: center; text-align: right;">Total TTC</td>
         <td style=" padding: 10px 15px;vertical-align: center; text-align: right;">@Model.TotalOnSalePrice EUR</td>
     </tr>
     <tr style="border:none;">
-        <td colspan="5" style="border:none;padding: 10px;"></td>
+        <td colspan="6" style="border:none;padding: 10px;"></td>
     </tr>
     </tbody>
 </table>
 <table cellpadding="0" cellspacing="0" align="center" width="100%" role="module" data-type="columns" style="border-collapse:collapse; padding:15px 0px 0px 0px;" bgcolor="#FFFFFF">
     <tbody>
-     <tr style="border:none;">
-            <td style="border:none; padding:10px 0px;">
-                <strong>Remarques :</strong>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <div style="min-height: 120px;border: #dddddd solid 1px; margin: 10px;">@Model.Comment</div>
-            </td>
-        </tr>
+    <tr style="border:none;">
+        <td style="border:none; padding:10px 0px;">
+            <strong>Remarques :</strong>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <div style="min-height: 120px;border: #dddddd solid 1px; margin: 10px;">@Model.Comment</div>
+        </td>
+    </tr>
     </tbody>
 </table>
 </body>
